Действия над пользователем с помощью контроллера Api.V1.Account.UserController
